# yetanotheremulator

./: CMakeLists.txt  README.md
include/core/: core.hpp  register.hpp
include/debugger/: breakpoint_provider.hpp  debugger.hpp
include/utils/: stringutils.hpp
lib/Debug/: libcore.lib
src/: main.cpp
src/core/: CMakeLists.txt  register.cpp
src/utils/: stringutils.cpp
